Fixed visual errors
Project cards, G logo, View my Work button

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gonzalo López Rodríguez - Portfolio</title>
 
-    <link rel="shortcut icon" href="Images/G-GoloroLogo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/G(Blanco)-GoloroLogo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="CSS/home.css">
 
@@ -22,8 +22,11 @@
             <p>Contact</p>
         </div>
         <div class="navBarSocialMedia">
+            <!-- https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba -->
             <img id="navBarLinkedInLogo" src="Images/linkedInLogo(White).png" alt="LinkedIn Logo">
+            <!-- https://github.com/goloro -->
             <img id="navBarGitHubLogo" src="Images/githubLogo(White).png" alt="GitHub Logo">
+            <!-- https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing -->
             <img id="navBarCVLogo" src="Images/cvLogo(White).png" alt="CV Logo">
         </div>
     </div>
@@ -90,7 +93,35 @@
                 <div class="project-card">
                     <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
                 </div>
+                <!-- Project 5 -->
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
+                <!-- Project 6 -->
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
+                <!-- Project 7 -->
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
+                <!-- Project 8 -->
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
                 <!-- Duplicate for infinite scroll -->
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
+                <div class="project-card">
+                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
+                </div>
                 <div class="project-card">
                     <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
                 </div>
