Structurize all pages

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gonzalo López Rodríguez - Portfolio</title>
+    <title>Gonzalo López Rodríguez</title>
 
     <link rel="shortcut icon" href="Images/G(Blanco)-GoloroLogo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="CSS/home.css">
+    <link rel="stylesheet" href="CSS/Pages/home.css">
+    <link rel="stylesheet" href="CSS/navBar.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
@@ -23,11 +24,19 @@
         </div>
         <div class="navBarSocialMedia">
             <!-- https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba -->
-            <img id="navBarLinkedInLogo" src="Images/linkedInLogo(White).png" alt="LinkedIn Logo">
+            <a href="https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba">
+                <img class="navBarSocialMedia_Image" id="navBarLinkedInLogo" src="Images/linkedInLogo(White).png"
+                    alt="LinkedIn Logo">
+            </a>
             <!-- https://github.com/goloro -->
-            <img id="navBarGitHubLogo" src="Images/githubLogo(White).png" alt="GitHub Logo">
+            <a href="https://github.com/goloro">
+                <img class="navBarSocialMedia_Image" id="navBarGitHubLogo" src="Images/githubLogo(White).png"
+                    alt="GitHub Logo">
+            </a>
             <!-- https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing -->
-            <img id="navBarCVLogo" src="Images/cvLogo(White).png" alt="CV Logo">
+            <a href="https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing">
+                <img class="navBarSocialMedia_Image" id="navBarCVLogo" src="Images/cvLogo(White).png" alt="CV Logo">
+            </a>
         </div>
     </div>
 
