--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="../CSS/Pages/contact.css">
     <link rel="stylesheet" href="../CSS/navBar.css">
+    <link rel="stylesheet" href="../CSS/common.css">
+    <link rel="stylesheet" href="../CSS/responsive.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
@@ -39,6 +41,10 @@
             </a>
         </div>
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2025 Gonzalo López Rodríguez. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
