--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <link rel="stylesheet" href="CSS/Pages/home.css">
     <link rel="stylesheet" href="CSS/navBar.css">
+    <link rel="stylesheet" href="CSS/common.css">
+    <link rel="stylesheet" href="CSS/responsive.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
@@ -145,6 +147,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
