--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -20,9 +20,9 @@
     <div class="navBar">
         <img id="navBarLogo" src="../Images/G(Blanco)-GoloroLogo.png" alt="Goloro White Logo">
         <div class="navBarMenu">
-            <p>About</p>
-            <p>Projects</p>
-            <p>Contact</p>
+            <p id="navBarAbout" class="navBarMenu_P">About</p>
+            <p id="navBarProjects" class="navBarMenu_P">Projects</p>
+            <p id="navBarContact" class="navBarMenu_P">Contact</p>
         </div>
         <div class="navBarSocialMedia">
             <!-- https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba -->
