--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -42,6 +42,154 @@
         </div>
     </div>
 
+    <main class="mainContent">
+        <p class="page-title">My Projects</p>
+
+        <div class="projects-gallery">
+            <!-- Project 1 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="../Images/ToDoAppCompleto.png" alt="ToDo App Project">
+                </div>
+                <div class="project-content">
+                    <h3>ToDo App</h3>
+                    <p>A comprehensive task management application designed to help users organize their daily
+                        activities efficiently.</p>
+                    <div class="project-links">
+                        <a href="#" class="btn-project" target="_blank">GitHub</a>
+                        <a href="#" class="btn-project" target="_blank">Live Demo</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 2 -->
+            <div class="project-card">
+                <div class="project-image">
+                    <img src="../Images/G(Blanco)-GoloroLogo.png" alt="Portfolio Project"
+                        style="object-fit: contain; padding: 20px; background: #1a1a1a;">
+                </div>
+                <div class="project-content">
+                    <h3>My Portfolio</h3>
+                    <p>This personal portfolio website showcases my skills, projects, and professional journey.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/goloro" class="btn-project" target="_blank">GitHub</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(45deg, #2A7AD5, #12345B);"></div>
+                <div class="project-content">
+                    <h3>Future Project</h3>
+                    <p>Coming soon. Stay tuned for more updates.</p>
+                </div>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(45deg, #040C15, #2A7AD5);"></div>
+                <div class="project-content">
+                    <h3>Another Idea</h3>
+                    <p>Exploring new technologies and frameworks.</p>
+                </div>
+            </div>
+
+            <!-- Project 5 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(135deg, #12345B, #2A7AD5);"></div>
+                <div class="project-content">
+                    <h3>E-Commerce Platform</h3>
+                    <p>A fully functional online store with cart, checkout, and payment integration.</p>
+                    <div class="project-links">
+                        <a href="#" class="btn-project">View Code</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Project 6 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(to bottom, #2A7AD5, #000000);"></div>
+                <div class="project-content">
+                    <h3>Weather App</h3>
+                    <p>Real-time weather updates using external APIs.</p>
+                </div>
+            </div>
+
+            <!-- Project 7 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(225deg, #12345B, #ffffff);"></div>
+                <div class="project-content">
+                    <h3>Mobile Game</h3>
+                    <p>A simple yet addictive puzzle game built for Android and iOS.</p>
+                </div>
+            </div>
+
+            <!-- Project 8 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(to right, #000428, #004e92);"></div>
+                <div class="project-content">
+                    <h3>Script Collection</h3>
+                    <p>Useful automation scripts for daily tasks.</p>
+                </div>
+            </div>
+
+            <!-- Project 9 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(180deg, #12345B, #000);"></div>
+                <div class="project-content">
+                    <h3>Task Manager</h3>
+                    <p>Organize your life with this simple tool.</p>
+                </div>
+            </div>
+
+            <!-- Project 10 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(90deg, #2A7AD5, #12345B);"></div>
+                <div class="project-content">
+                    <h3>Social Network</h3>
+                    <p>Connect with friends and share your moments.</p>
+                </div>
+            </div>
+
+            <!-- Project 11 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(to right, #243B55, #141E30);"></div>
+                <div class="project-content">
+                    <h3>Notes App</h3>
+                    <p>Keep your thoughts organized.</p>
+                </div>
+            </div>
+
+            <!-- Project 12 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(to top, #1e3c72 0%, #2a5298 100%);"></div>
+                <div class="project-content">
+                    <h3>Fitness Tracker</h3>
+                    <p>Track your workouts and progress over time.</p>
+                </div>
+            </div>
+
+            <!-- Project 13 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(to right, #4b6cb7, #182848);"></div>
+                <div class="project-content">
+                    <h3>Music Player</h3>
+                    <p>Listen to your favorite tunes.</p>
+                </div>
+            </div>
+
+            <!-- Project 14 -->
+            <div class="project-card">
+                <div class="project-image" style="background: linear-gradient(45deg, #2A7AD5, #fff);"></div>
+                <div class="project-content">
+                    <h3>Calculator</h3>
+                    <p>A simple calculator for everyday needs.</p>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <footer class="footer">
         <p>&copy; 2025 Gonzalo López Rodríguez. All rights reserved.</p>
     </footer>
