--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <link rel="shortcut icon" href="Images/G(Blanco)-GoloroLogo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="CSS/Pages/home.css">
     <link rel="stylesheet" href="CSS/navBar.css">
     <link rel="stylesheet" href="CSS/common.css">
     <link rel="stylesheet" href="CSS/responsive.css">
+    <link rel="stylesheet" href="CSS/Pages/home.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
@@ -148,6 +148,10 @@
             </div>
         </div>
     </div>
+
+    <footer class="footer">
+        <p>&copy; 2025 Gonzalo López Rodríguez. All rights reserved.</p>
+    </footer>
 </body>
 
 </html>
