Added NavBar Navigation

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -25,17 +25,14 @@
             <p id="navBarContact" class="navBarMenu_P">Contact</p>
         </div>
         <div class="navBarSocialMedia">
-            <!-- https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba -->
             <a href="https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba">
                 <img class="navBarSocialMedia_Image" id="navBarLinkedInLogo" src="../Images/linkedInLogo(White).png"
                     alt="LinkedIn Logo">
             </a>
-            <!-- https://github.com/goloro -->
             <a href="https://github.com/goloro">
                 <img class="navBarSocialMedia_Image" id="navBarGitHubLogo" src="../Images/githubLogo(White).png"
                     alt="GitHub Logo">
             </a>
-            <!-- https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing -->
             <a href="https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing">
                 <img class="navBarSocialMedia_Image" id="navBarCVLogo" src="../Images/cvLogo(White).png" alt="CV Logo">
             </a>
@@ -375,6 +372,8 @@
     <footer class="footer">
         <p>&copy; 2025 Gonzalo López Rodríguez. All rights reserved.</p>
     </footer>
+
+    <script src="../JS/navBar.js"></script>
 </body>
 
 </html>
