--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -25,17 +25,14 @@
             <p id="navBarContact" class="navBarMenu_P">Contact</p>
         </div>
         <div class="navBarSocialMedia">
-            <!-- https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba -->
             <a href="https://linkedin.com/in/gonzalo-lópez-rodríguez-b919101ba">
                 <img class="navBarSocialMedia_Image" id="navBarLinkedInLogo" src="../Images/linkedInLogo(White).png"
                     alt="LinkedIn Logo">
             </a>
-            <!-- https://github.com/goloro -->
             <a href="https://github.com/goloro">
                 <img class="navBarSocialMedia_Image" id="navBarGitHubLogo" src="../Images/githubLogo(White).png"
                     alt="GitHub Logo">
             </a>
-            <!-- https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing -->
             <a href="https://drive.google.com/file/d/123RBxI9oLEceCZcG7DbtWLiQBfkE-9c3/view?usp=sharing">
                 <img class="navBarSocialMedia_Image" id="navBarCVLogo" src="../Images/cvLogo(White).png" alt="CV Logo">
             </a>
@@ -46,13 +43,6 @@
         <p class="page-title">Contact Me</p>
 
         <div class="contact-container">
-            <!-- 
-                GOOGLE FORM INTEGRATION INSTRUCTIONS:
-                1. Create a Google Form with Name, Email, and Message fields.
-                2. Get the "pre-filled link" to find the entry IDs (e.g., entry.123456).
-                3. Replace 'YOUR_GOOGLE_FORM_ACTION_URL' with the form action URL (ends in /formResponse).
-                4. Replace 'ENTRY_ID_NAME', 'ENTRY_ID_EMAIL', 'ENTRY_ID_MESSAGE' with your actual entry IDs.
-            -->
             <form action="https://formsubmit.co/goloro02@gmail.com" method="POST" target="_blank" class="contact-form">
                 <div class="form-group">
                     <label for="name">Name</label>
@@ -77,6 +67,8 @@
     <footer class="footer">
         <p>&copy; 2025 Gonzalo López Rodríguez. All rights reserved.</p>
     </footer>
+
+    <script src="../JS/navBar.js"></script>
 </body>
 
 </html>
