--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
                         <pre>
     <span class="keyword">const</span> <span class="variable">developer</span> = {
         <span class="property">name</span>: <span class="string">"Gonzalo López Rodríguez"</span>,
-        <span class="property">role</span>: <span class="string">"Full Stack Dev"</span>,
+        <span class="property">role</span>: <span class="string">"Full Stack Web Developer"</span>,
         <span class="property">skills</span>: [
             <span class="string">"JavaScript"</span>,
-            <span class="string">"React"</span>,
-            <span class="string">"Node.js"</span>
+            <span class="string">"Node.js"</span>,
+            <span class="string">"Python"</span>,
+            <span class="string">"Java"</span>
         ],
         <span class="property">hardWorker</span>: <span class="boolean">true</span>
     };
@@ -82,66 +83,9 @@
                 </div>
             </div>
         </div>
-        <div class="mainContentProjectsPreview">
 
+        <div class="mainContentProjectsPreview">
             <div class="carousel-track">
-                <!-- Project 1 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 2 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 3 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 4 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 5 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 6 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 7 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Project 8 -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <!-- Duplicate for infinite scroll -->
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
-                <div class="project-card">
-                    <img src="Images/ToDoAppCompleto.png" alt="Project Image" class="project-image">
-                </div>
             </div>
         </div>
     </div>
@@ -151,6 +95,7 @@
     </footer>
 
     <script src="JS/navBar.js"></script>
+    <script src="JS/dataLoader.js"></script>
     <script src="JS/Pages/index.js"></script>
 </body>
 
