Finished Projects Functionallity

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -42,7 +42,7 @@
     <div class="mainContent">
         <p class="page-title">Trajectory</p>
         <div class="timeline" id="timeline-container">
-
+            <!-- Content loaded dynamically via JS/Pages/about.js -->
         </div>
 
         <div class="skills-section">
@@ -51,14 +51,14 @@
             <div class="skills-category">
                 <h3 class="category-title">Soft Skills</h3>
                 <div class="skills-grid" id="softSkills-grid">
-
+                    <!-- Content loaded dynamically via JS/Pages/about.js -->
                 </div>
             </div>
 
             <div class="skills-category">
                 <h3 class="category-title">Technologies</h3>
                 <div class="skills-grid" id="technologies-grid">
-
+                    <!-- Content loaded dynamically via JS/Pages/about.js -->
                 </div>
             </div>
         </div>
