--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
         <div class="mainContentProjectsPreview">
             <div class="carousel-track">
+                <!-- Content loaded dynamically via JS/Pages/index.js -->
             </div>
         </div>
     </div>
