--- a/HTML/projects.html
+++ b/HTML/projects.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../CSS/Pages/projects.css">
     <link rel="stylesheet" href="../CSS/navBar.css">
     <link rel="stylesheet" href="../CSS/common.css">
-    <link rel="stylesheet" href="../CSS/responsive.css">
+    <link rel="stylesheet" href="../CSS/Responsive/navBar.responsive.css">
+    <link rel="stylesheet" href="../CSS/Responsive/Pages/projects.responsive.css">
 
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
