--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <div class="navBar">
-        <img id="navBarLogo" src="Images/G(Blanco)-GoloroLogo.png" alt="Goloro White Logo">
+        <img id="navBarLogo" src="Images/goloro_logo.svg" alt="Goloro White Logo">
         <div class="navBarMenu">
             <p id="navBarAbout" class="navBarMenu_P">About</p>
             <p id="navBarProjects" class="navBarMenu_P">Projects</p>
