Index information fix

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="hero-section">
             <div class="mainContentText">
                 <h1>Gonzalo López Rodríguez</h1>
-                <p>Full Stack Web Developer & Graduated at Information Systems</p>
+                <p>Full Stack Web Developer & Information Systems Student</p>
                 <div class="mainContentTextButtons">
                     <div class="MCTB-Button" id="MCTB-Button-ViewMyWork">
                         <p>View my Work</p>
@@ -74,8 +74,8 @@
         <span class="property">skills</span>: [
             <span class="string">"JavaScript"</span>,
             <span class="string">"Node.js"</span>,
-            <span class="string">"Python"</span>,
-            <span class="string">"Java"</span>
+            <span class="string">"Java"</span>,
+            <span class="string">"Python"</span>
         ],
         <span class="property">hardWorker</span>: <span class="boolean">true</span>
     };
